--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </p>
                 <div class="pricing">
                   <h1><img src="http://templates.thememodern.com/theratio/images/iconbox1.2.png"></h1>
-                  <a href="#" class="btn btn-dark px-5 py-2 primary-btn mb-5">READ MORE</a>
+                  <a href="https://www.unoy.org/evaluationguide/learning/for-projects/2-planning-and-design/" class="btn btn-dark px-5 py-2 primary-btn mb-5">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -225,7 +225,7 @@
                 </p>
                 <div class="pricing">
                   <h1><img src="http://templates.thememodern.com/theratio/images/iconbox2.png"></h1>
-                  <a href="#" class="btn btn-dark px-5 py-2 primary-btn mb-5">READ MORE</a>
+                  <a href="https://www.altexsoft.com/blog/engineering/solution-architect-role/" class="btn btn-dark px-5 py-2 primary-btn mb-5">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -239,7 +239,7 @@
                 </p>
                 <div class="pricing">
                   <h1><img src="http://templates.thememodern.com/theratio/images/iconbox3.png"></h1>
-                  <a href="#" class="btn btn-dark px-5 py-2 primary-btn mb-5">READ MORE</a>
+                  <a href="https://www.archdaily.com/tag/furniture-design" class="btn btn-dark px-5 py-2 primary-btn mb-5">READ MORE</a>
                 </div>
               </div>
             </div>
